--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
     <head>
-        <title>You wanna hear a joke? THE DNC </title>
+        <title>You wanna hear a joke?  </title>
         </head>
-        <body>
+        <body>THE DNC
             </body>
 </html>
