--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <DOCTYPE html>
     <head>
         <title>You wanna hear a joke?  </title>
+        <link type= "text/css"" rel="stylesheet" href= "index.css">
+        <link type= "text/javascript" rel="stylesheet" href= "index.js">
         </head>
         <body>THE DNC
             </body>
