--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>You wanna hear a joke?  </title>
         <link type= "text/css"" rel="stylesheet" href= "index.css">
         <link type= "text/javascript" rel="stylesheet" href= "index.js">
+        <script src= "index.js"> </script>
         </head>
         <body>THE DNC
             </body>
