--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <script src= "index.js"> </script>
         </head>
         <body>THE DNC
+            <div id= "S1"></div>
             </body>
 </html>
