--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <link type= "text/javascript" rel="stylesheet" href= "index.js">
         <script src= "index.js"> </script>
         </head>
+        <!-- Not funny though -->
         <body>THE DNC
             <div id= "S1"></div>
+            <div id= "S2"></div>
+            <div id= "S3"></div>
+            <div id= "S4"></div>
             </body>
 </html>
