--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </head>
         <!-- Not funny though -->
         <body>THE DNC
-            <div id= "S1"></div>
+            <div id= "S1"> <p> Hi </p> </div>
             <div id= "S2"></div>
             <div id= "S3"></div>
             <div id= "S4"></div>
