Commit 12- Add Pics

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
             <div id= "S2"></div>
             <div id= "S3"></div>
             <div id= "S4"></div>
+            <img id= "K1"/>
             </body>
 </html>
