--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- Not funny though -->
         <body>THE DNC
             <div id= "S1"> <p> Hi </p> </div>
-            <div id= "S2"></div>
+            <div id= "S2"><p> Hello World </p> </div>
             <div id= "S3"></div>
             <div id= "S4"></div>
             <img id= "K1"/>
