--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
             <div id= "S3"></div>
             <div id= "S4"></div>
             <img id= "K1"/>
+            <div id= "S5:> 
+            <p1>
+                Template for when people are bored
+            </p1>
             </body>
+            
 </html>
