--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img id= "K1"/>
             <div id= "S5:> 
             <p1>
-                Template for when people are bored
+                <a href "http://thestemlaboratory.com/stem-activities-for-kids/"> </a>Template for when people are bored
             </p1>
             </body>
             
